# yadro_test

./: CMakeLists.txt  Event.cpp  Event.hpp  EventTime.cpp  EventTime.hpp  Model.cpp  Model.hpp  README.md  Time.cpp  Time.hpp  main.cpp
.github/workflows/: build.yml
include/: Event.hpp  Model.hpp  Parse.hpp  Time.hpp
src/: Event.cpp  Model.cpp  Parse.cpp  Time.cpp  main.cpp
test/: TestEvent.cpp  TestModel.cpp  TestParse.cpp  TestTime.cpp  test.cpp
